--- a/index.html
+++ b/index.html
@@ -61,9 +61,8 @@
     </div>
 
     <footer>
-      <p>Contact: Jialin Ma (jma@broadinstitute.org)</p>
+      <p> Copyright © 2020 Broad Institute of MIT and Harvard. Contact: Jialin Ma (jma@broadinstitute.org) </p>
     </footer>
-
 
   </body>
 </html>
